# Bartrify-final-project

./: .dockerignore  .gitignore  CHANGELOG.md  Dockerfile  LICENSE  Makefile  README.md  compose.yaml  db.sqlite3  manage.py  pyproject.toml
.devcontainer/: devcontainer.json
bartrify/: asgi.py  settings.py  urls.py  wsgi.py
core/: consumers.py  mixins.py  models.py  routing.py  test.http  urls.py  views.py
core/migrations/: 0001_initial.py  0002_user_bio_user_location.py  0003_service.py  0004_servicerequest.py  0005_user_avatar_alter_user_first_name_and_more.py  0006_service_desired_category.py  0007_alter_service_price.py  0008_alter_service_price.py  0009_alter_service_price.py  0010_alter_service_category_and_more.py  0011_chatroom_message.py  0012_user_avatar_upload_user_avatar_url.py  0013_remove_user_avatar_alter_user_avatar_upload.py  0014_service_trade_type.py  0015_review.py  0016_remove_review_service_review_reviewee_and_more.py  0017_alter_servicerequest_status.py  0018_alter_review_options_review_request_review_service_and_more.py  0019_alter_review_options_alter_review_unique_together_and_more.py  0020_review_service_request.py  0021_alter_review_rating.py  0022_alter_service_title.py  0023_servicerequest_offered_service.py
core/serializers/: date.py  password.py  request.py  review.py  service.py  user.py
core/templates/: base.html
core/views/: __init__.py  auth.py  pages.py  password.py  request.py  review.py  service.py  user.py
custom_static/css/: Register.css  chat.css  chat_modal.css  dashboard.css  (+9 more)
tests/: test_critical_api_paths.py
(+41 files in other folders)
